# offline_dataset_generator

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.schema.json  config.yaml
scripts/: index.py  run_pipeline.py  show_chunks.py
src/: __init__.py  config.py  pipeline.py
src/export/: __init__.py  exporters.py
src/generation/: __init__.py
src/generation/agent1/: __init__.py  graph.py  nodes.py  state.py  validators.py
src/generation/agent2/: __init__.py  graph.py  nodes.py  state.py  strategies.py  validators.py
src/generation/prompts/: agent1_prompts.py  agent2_prompts.py
src/infrastructure/: __init__.py  chroma_store.py  llm_client.py
src/ingestion/: __init__.py  chunker.py  converter.py  index.py
src/ingestion/prompts/: default_vlm_prompts.py
tests/: conftest.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_agent1_validators.py  test_agent2_validators.py  test_exporters.py
